# rust_socket

./: .gitignore  Cargo.toml  EXPLANATION.md  README.md  build.rs  rustDocumetation.md  ws_client.html
proto/: messages.proto
src/: backupmain.rs  http_server.rs  main.rs  ws_server.rs
