[package]
name = "rust_socket"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.12"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
prost = "0.12"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4"] }